--- a/.github/workflows/library testing.yml
+++ b/.github/workflows/library testing.yml
@@ -17,7 +17,7 @@ env:
 
 jobs:
   build-and-deploy-package:
-    runs-on: [self-hosted, windows]
+    runs-on: windows-latest
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
