--- a/.github/workflows/library testing.yml
+++ b/.github/workflows/library testing.yml
@@ -23,16 +23,20 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup UiPath CLI
-        run: |
+        run: |  
+            $feedUrl = "https://uipath.visualstudio.com/Public.Feeds/_artifacts/feed/UiPath-Official/NuGet"
+            $packageName = "UiPath.CLI.Windows"
+            $version = "24.12.9111.31003"
+    
+            Invoke-WebRequest -Uri "https://dist.nuget.org/win-x86-commandline/latest/nuget.exe" -OutFile nuget.exe
 
-          Invoke-WebRequest -Uri https://download.uipath.com/cli/uipcli.zip -OutFile uipcli.zip
-          
-          Expand-Archive -Path uipcli.zip -DestinationPath uipcli -Force
-        
-          $env:Path += ";$PWD\uipcli"
+            .\nuget.exe install $packageName -Version $version -Source $feedUrl -OutputDirectory .\uipcli
+    
+            $env:Path += ";$PWD\uipcli\$packageName.$version\tools"
 
-          uipcli --version
-        shell: powershell  
+            # Verify installation
+            uipcli --version
+        shell: powershell
         
       - name: Read Version
         id: read_version
